Make sure text doesn't overflow emulated text-field

--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -109,6 +109,7 @@ textarea {
   .input {
     background: var(--input-disabled-bg);
     line-height: 1.8em;
+    word-break: break-word;
     height: auto;
     max-height: none;
     cursor: not-allowed;
